-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.8.4, 6.9.2
-
None
-
a26c05c45 (dev), be4765659 (6.10), ec95fe0b3 (6.9), 894540298 (tqtc/lts-6.8), 9510edd94 (dev), 9e2a796af (6.10), d375719ef (6.9), 2567f5ff5 (tqtc/lts-6.8)
The following qt/tqtc-qtspeech errors fail the dependency update round on tqtc/lts-6.8:
https://codereview.qt-project.org/c/qt/tqtc-qtspeech/+/653252
386: ********* Start testing of tst_QTextToSpeech ********* FAIL! : tst_QTextToSpeech::sayHello(flite) Compared values are not the same Actual (tts.state()) : Ready Expected (QTextToSpeech::Speaking): Speaking Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(544)] FAIL! : tst_QTextToSpeech::pauseResume(flite) Compared values are not the same Actual (tts.state()) : Ready Expected (QTextToSpeech::Paused): Paused Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(574)] FAIL! : tst_QTextToSpeech::sayWithVoices(flite) Compared values are not the same Actual (tts.state()) : Ready Expected (QTextToSpeech::Speaking): Speaking Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(614)] FAIL! : tst_QTextToSpeech::sayWithRates(flite) 'time > lastTime' returned FALSE. (0 took 10, last was 10) Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(658)] QWARN : tst_QTextToSpeech::sayWithRates(flite) Failure with voice QVoice(name: awb, locale: QLocale(English, Latin, United States), gender: Male, age: Adult; data: QVariant(int, 0)) PASS : tst_QTextToSpeech::sayMultiple(mock:one) FAIL! : tst_QTextToSpeech::sayMultiple(flite:one) The computed value is expected to be different from the baseline, but is not Computed (tts.state()) : Ready Baseline (QTextToSpeech::Ready): Ready Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(728)] FAIL! : tst_QTextToSpeech::sayMultiple(flite:three) The computed value is expected to be different from the baseline, but is not Computed (tts.state()) : Ready Baseline (QTextToSpeech::Ready): Ready Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(728)] FAIL! : tst_QTextToSpeech::pauseAtUtterance(flite:one) Compared values are not the same Actual (tts.state()) : Ready Expected (QTextToSpeech::Speaking): Speaking Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(778)] FAIL! : tst_QTextToSpeech::pauseAtUtterance(flite:three) Compared values are not the same Actual (tts.state()) : Ready Expected (QTextToSpeech::Speaking): Speaking Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(778)] FAIL! : tst_QTextToSpeech::sayingWord(flite:one word) Compared values are not the same Actual (tts.state()) : Ready Expected (QTextToSpeech::Speaking): Speaking Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(839)] FAIL! : tst_QTextToSpeech::sayingWord(flite:sentence) Compared lists have different sizes. Actual (words) size: 0 Expected (expectedWords) size: 4 Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(843)] FAIL! : tst_QTextToSpeech::sayingWord(flite:punctuation) Compared lists have different sizes. Actual (words) size: 0 Expected (expectedWords) size: 6 Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(843)] FAIL! : tst_QTextToSpeech::sayingWord(flite:two sentences) Compared values are not the same Actual (tts.state()) : Ready Expected (QTextToSpeech::Speaking): Speaking Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(839)] FAIL! : tst_QTextToSpeech::sayingWordWithPause(flite:pause1) Compared values are not the same Actual (tts.state()) : Ready Expected (QTextToSpeech::Paused): Paused Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(901)] FAIL! : tst_QTextToSpeech::sayingWordWithPause(flite:pause4) Compared values are not the same Actual (tts.state()) : Ready Expected (QTextToSpeech::Paused): Paused Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(901)] FAIL! : tst_QTextToSpeech::synthesize(flite:text) The computed value is expected to be less than the baseline, but is not Computed (pcmData.size()) : 76000 Baseline (double(bytesExpected) * 1.5): 1104 Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(998)] Totals: 64 passed, 15 failed, 3 skipped, 0 blacklisted, 201385ms 1282: "/home/qt/work/install/plugins/platforminputcontexts/libcomposeplatforminputcontextplugin.so" unloaded library "/home/qt/work/install/plugins/platforms/libqxcb.so" unloaded library "/home/qt/work/install/plugins/texttospeech/libqtexttospeech_flite.so" unloaded library "flite_cmu_us_awb.so.1" unloaded library "flite_cmu_us_kal.so.1" unloaded library "flite_cmu_us_kal16.so.1" unloaded library "flite_cmu_us_rms.so.1" unloaded library "flite_cmu_us_slt.so.1" unloaded library qt-testrunner.py INFO: Test process exited with code: 1 qt-testrunner.py INFO: Test has FAILed despite all repetitions! re-runs:5 failures:5 CMake Error at tst_qtexttospeechWrapperDebug.cmake:18 (message):
Details: https://ci-files01-hki.ci.qt.io:8081/coin/integration/qt/tqtc-qtspeech/tasks/1750049882
Tested changes (refs/builds/qtci/tqtc/lts-6.8/1750049745):
https://codereview.qt-project.org/c/qt/tqtc-qtspeech/+/653252/2 Update dependencies on 'tqtc/lts-6.8' in qt/tqtc-qtspeech
- relates to
-
QTBUG-137947 [flite] QTextToSpeech::pause(BoundaryHint::Word) not implemented
-
- In Review
-
-
QTBUG-137343 [pulseaudio] failures in setPlaybackRate_changesActualRateAndFramesRenderingTime
-
- Closed
-
| For Gerrit Dashboard: QTBUG-137735 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 653536,2 | QAudioSink: make QIODeviceRingBufferWriter::write blocking | dev | qt/qtmultimedia | Status: ABANDONED | 0 | +1 |
| 653538,1 | QAudioSink: make QIODeviceRingBufferWriter::write blocking | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: ABANDONED | 0 | 0 |
| 653580,2 | Flite: Add retry loop when writing to QIODevice | dev | qt/qtspeech | Status: MERGED | +2 | 0 |
| 654305,2 | Flite: Add retry loop when writing to QIODevice | 6.10 | qt/qtspeech | Status: MERGED | +2 | 0 |
| 654403,2 | Flite: Add retry loop when writing to QIODevice | 6.9 | qt/qtspeech | Status: MERGED | +2 | 0 |
| 654473,2 | Flite: Add retry loop when writing to QIODevice | tqtc/lts-6.8 | qt/tqtc-qtspeech | Status: MERGED | +2 | 0 |
| 655079,2 | Tests: skip sayingWordWithPause for flite engine | dev | qt/qtspeech | Status: MERGED | +2 | 0 |
| 655117,2 | Tests: skip sayingWordWithPause for flite engine | 6.10 | qt/qtspeech | Status: MERGED | +2 | 0 |
| 655125,2 | Tests: skip sayingWordWithPause for flite engine | 6.9 | qt/qtspeech | Status: MERGED | +2 | 0 |
| 655131,2 | Tests: skip sayingWordWithPause for flite engine | tqtc/lts-6.8 | qt/tqtc-qtspeech | Status: MERGED | +2 | 0 |